--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>The series is famous for its iconic art style, creative battle sequences, memorable characters, and its absolutely bizarre storylines that range from vampire hunting in Victorian England to Italian gangsters with supernatural powers.</p>
                 </div>
                 <div class="image-container">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/Hirohiko_Araki.jpg" alt="Hirohiko Araki, creator of JoJo's Bizarre Adventure" class="author-image">
+                    <img src="https://th.bing.com/th/id/OIP.ATTitovRwAgNEjZtKULzxgHaGL?rs=1&pid=ImgDetMain">
                     <p class="caption">Hirohiko Araki, creator of JoJo's Bizarre Adventure</p>
                 </div>
             </div>
