--- a/index.html
+++ b/index.html
@@ -39,29 +39,29 @@
             <div class="parts-flex">
                 <div class="part">
                     <h3>Part 1: Phantom Blood</h3>
-                    <img src="https://m.media-amazon.com/images/M/MV5BZDc3NGQ3ZWQtYjNkOC00MjhiLTg2N2YtNmZlOGNiZTFkOWNhXkEyXkFqcGdeQXVyNjc3OTE4Nzk@._V1_.jpg" alt="JoJo's Bizarre Adventure: Phantom Blood">
+                    <img src="https://th.bing.com/th/id/R.000cf95278d0b5b8f2e3a755ad788165?rik=UWRpvtrUWMUCOA&pid=ImgRaw&r=0">
                     <p>Set in Victorian England, Jonathan Joestar battles his adopted brother, the vampiric Dio Brando, using an ancient martial art called Hamon.</p>
                 </div>
                 <div class="part">
                     <h3>Part 2: Battle Tendency</h3>
-                    <img src="https://m.media-amazon.com/images/M/MV5BZTE2OWRkMzUtOGVhZS00NTUxLWE1MzctNTc2NjhiZmJiYzYyXkEyXkFqcGdeQXVyMTAwMzM3NDI3._V1_FMjpg_UX1000_.jpg" alt="JoJo's Bizarre Adventure: Battle Tendency">
+                    <img src="https://th.bing.com/th/id/R.c46d3e48a2c499194ad07801f06322e7?rik=5YHcTa2JW5FSRg&pid=ImgRaw&r=0">
                     <p>Joseph Joestar, Jonathan's grandson, fights against the ancient Pillar Men who created the Stone Mask that transformed Dio into a vampire.</p>
                 </div>
                 <div class="part">
                     <h3>Part 3: Stardust Crusaders</h3>
-                    <img src="https://m.media-amazon.com/images/M/MV5BNDZiOWQ0ZmItNTAyMi00NGM2LTk2M2ItN2JiYTcxMDQxNjM1XkEyXkFqcGdeQXVyMTAwMzM3NDI3._V1_.jpg" alt="JoJo's Bizarre Adventure: Stardust Crusaders">
+                    <img src="https://th.bing.com/th/id/OIP.Q0TZXuhYeR_HfAZzbJxPmQHaE8?rs=1&pid=ImgDetMain">
                     <p>Jotaro Kujo travels to Egypt to save his mother from the resurrected Dio. This part introduces "Stands," manifestations of psychic power that become the primary supernatural element in the series.</p>
                 </div>
             </div>
             <div class="parts-flex">
                 <div class="part">
                     <h3>Part 4: Diamond is Unbreakable</h3>
-                    <img src="https://m.media-amazon.com/images/M/MV5BNjRjNmQ5MDktMmQxMS00ZTM0LWE4ODYtYjFkMWJmN2ZjNjJlXkEyXkFqcGdeQXVyNjc3OTE4Nzk@._V1_.jpg" alt="JoJo's Bizarre Adventure: Diamond is Unbreakable">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/81GyqsC7hSL.jpg">
                     <p>Josuke Higashikata, Joseph's illegitimate son, protects the town of Morioh from various Stand users, including a serial killer with a Stand that can create explosions.</p>
                 </div>
                 <div class="part">
                     <h3>Part 5: Golden Wind</h3>
-                    <img src="https://m.media-amazon.com/images/M/MV5BMTA0MDI2NTY5MDheQTJeQWpwZ15BbWU4MDUwMzYxNzQz._V1_.jpg" alt="JoJo's Bizarre Adventure: Golden Wind">
+                    <img src="https://wallpapercave.com/wp/wp4341498.jpg">
                     <p>Giorno Giovanna, the son of Dio, joins a mafia organization in Italy with the goal of becoming a "Gang-Star" and reforming the gang from within.</p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 JoJo's Bizarre Website | Created for Educational Purposes</p>
+        <p>&copy; 2025 JoJo's Bizarre Website | Created for Educational Purposes by Amanqos Alquat IITU student</p>
     </footer>
 </body>
 </html>
