--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="part">
                     <h3>Part 3: Stardust Crusaders</h3>
-                    <img src="https://th.bing.com/th/id/OIP.Q0TZXuhYeR_HfAZzbJxPmQHaE8?rs=1&pid=ImgDetMain">
+                    <img src="https://1.bp.blogspot.com/-J2nZFXjEWic/Xqe8j7UcZTI/AAAAAAAACxQ/xD_RTVrZHAoy_ZQuXjHevV5TEH7RiGbmwCLcBGAsYHQ/s1600/jojstar.jpg">
                     <p>Jotaro Kujo travels to Egypt to save his mother from the resurrected Dio. This part introduces "Stands," manifestations of psychic power that become the primary supernatural element in the series.</p>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="part">
                     <h3>Part 5: Golden Wind</h3>
-                    <img src="https://wallpapercave.com/wp/wp4341498.jpg">
+                    <img src="https://vignette.wikia.nocookie.net/jjba/images/5/55/GoldenWind-Promo.png/revision/latest?cb=20180930190706">
                     <p>Giorno Giovanna, the son of Dio, joins a mafia organization in Italy with the goal of becoming a "Gang-Star" and reforming the gang from within.</p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 JoJo's Bizarre Website | Created for Educational Purposes by Amanqos Alquat IITU student</p>
+        <p>&copy; 2025 JoJo's Bizarre Website | Created for Educational Purposes by Alquat</p>
     </footer>
 </body>
 </html>
