--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <p>Giorno Giovanna, the son of Dio, joins a mafia organization in Italy with the goal of becoming a "Gang-Star" and reforming the gang from within.</p>
                 </div>
             </div>
+            <p class="copyright-notice">All images belong to their copyright holders. Used for educational and analytical purposes.</p>
         </section>
 
         <section class="unique-style">
