--- a/impact.html
+++ b/impact.html
@@ -88,7 +88,7 @@
                     </ul>
                 </div>
                 <div class="image-container">
-                    <img src="https://i.imgur.com/gVKnJVj.jpg" alt="JoJo's influence on fashion">
+                    <img src="https://i.pinimg.com/originals/80/8d/fa/808dfac669fd4dd7af199db3d8e0abff.jpg" alt="JoJo's influence on fashion">
                     <p class="caption">JoJo's distinctive fashion sense has influenced real-world style</p>
                 </div>
             </div>
