--- a/achievements.html
+++ b/achievements.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
                 <div class="image-container">
-                    <img src="https://i.imgur.com/87vhwzs.jpg" alt="JoJo manga volumes collection">
+                    <img src="https://i.ebayimg.com/images/g/JLgAAOSwHzxhAvJd/s-l1600.jpg">
                     <p class="caption">The extensive collection of JoJo's Bizarre Adventure manga volumes</p>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     <p>This achievement represents a significant milestone not just for JoJo's Bizarre Adventure, but for manga as an art form. It demonstrated that manga could be recognized and appreciated as a legitimate artistic medium by one of the world's most prestigious cultural institutions.</p>
                 </div>
                 <div class="image-container">
-                    <img src="https://i.imgur.com/NBk5XJY.jpg" alt="Rohan at the Louvre manga cover">
+                    <img src="https://preview.redd.it/x080xlqfc5p91.jpg?width=640&crop=smart&auto=webp&s=cedf2bdd0a6c292485e6a5f0848e1df4272a2e7f" alt="Rohan at the Louvre manga cover">
                     <p class="caption">Cover art for "Rohan at the Louvre," the special one-shot created for the Louvre exhibition</p>
                 </div>
             </div>
